<resources>
    <string name="app_name">اسلاميات</string>
    <string name="hidaia">ياودود يا كريم يا جبار السماوات والأرض يا هادي القلوب اهدي قلبي … يا مغيث أغثني يا مغيث أغثني يا مغيث أغثني.. اللهم لا تزين لي عمل السوءاللهم ذكرني دائما بأن الدنيا زائلة فاصرف عني زينتها
</string>
    <string name="hidaia1">اللهم اعني اللهم أغثني فوضت أمري إليك ووجهت وجهي إليك لا ملجأ إلاإليك اللهم انك تعلم ما بحياتي كله الظاهر والباطن ما اعلمه وما أنت اعلم به مني استغفرك وأتوب إليك. اللهم خذ بيدي إلى الهداية واستر علي وعلى جميع المسلمين الحمدلله الحمد لله الحمد لله الحمد لله الحمد لله حمداً كثيراً طيباً مباركاً كما ينبغي لجلال وجهه وعظيم سلطانه وصلى الله على محمد وعلى اله وصحبه أجمعين
    </string>
    <string name="hidaia2">اللهم يا من لا تراه العيون، وعجز عن وصفه الواصفون، اهدني للحقِّ وإلى الصراط المستقيم، ولا تخزني يوم يبعثون يوم لا ينفع مال ولا بنون</string>
    <string name="hidaia3">اللهم إنّا جئناك نبرأ إليك من كل ذنب به عصيناك، اللهم فاقبل توبتنا، وزد في إيماننا، وأعظم درجتنا، إنك أرحم الراحمين</string>
    <string name="hidaiaa4">اللَّهُمَّ إِنِّي أَسْأَلُكَ الْهُدَى، وَالتُّقَى، وَالْعَفَافَ، وَالْغِنَى اللهم يا قادراً على كل شيء .. اغفر لنا كل شيء وارحمنا برحمتك الواسعة التي رحمت بها كل شيء وإذا وقفنا بين يديك لا تسألنا عن أي شيء فإنك أهل التقوى وأهل المغفرة . اللهم اجعلنا من الذين يحبونَ لقاءكَ وتحبُّ لقاءهم .</string>
    <string name="rizk">  “اللَّهُمَّ رَبَّ السَّمَوَاتِ وَرَبَّ الأرْضِ وَرَبَّ العَرْشِ العَظِيمِ، رَبَّنَا وَرَبَّ كُلِّ شيءٍ، فَالِقَ الحَبِّ وَالنَّوَى، وَمُنْزِلَ التَّوْرَاةِ وَالإِنْجِيلِ وَالْفُرْقَانِ، أَعُوذُ بكَ مِن شَرِّ كُلِّ شيءٍ أَنْتَ آخِذٌ بنَاصِيَتِهِ، اللَّهُمَّ أَنْتَ الأوَّلُ فليسَ قَبْلَكَ شيءٌ، وَأَنْتَ الآخِرُ فليسَ بَعْدَكَ شيءٌ، وَأَنْتَ الظَّاهِرُ فليسَ فَوْقَكَ شيءٌ، وَأَنْتَ البَاطِنُ فليسَ دُونَكَ شيءٌ، اقْضِ عَنَّا الدَّيْنَ، وَأَغْنِنَا مِنَ الفَقْرِ
</string>
    <string name="risk1">    اللهمّ إنّي أسألك العافيةَ في الدُنيا والآخرة، اللهمّ إنّي أسألك العفوَ والعافيةَ في ديني ودُنياي وأهلي ومالي، اللهمّ استر عوراتي وآمن رَوْعَاتي، اللهمّ احفظني مِن بين يَدَيَّ ومِن خلفي وعن يميني وعن شمالي ومن فوقي، وأعوذُ بعظمتِك أن أُغتاَل مِن تحتي.
</string>
    <string name="rizk2">الْحَمْدُ لِلَّهِ الَّذِي لَا يَنْسَى مَنْ ذَكَرَهُ ، الْحَمْدُ لِلَّهِ الَّذِي لَا يُخَيِّبُ مَنْ رَجَاهُ ، الْحَمْدُ لِلَّهِ الَّذِي لَا يَكِلُ مَنْ تَوَكَّلَ عَلَيْهِ إِلَى غَيْرِهِ ، الْحَمْدُ لِلَّهِ الَّذِي هُوَ يَقِينَا حِينَ تَنْقَطِعُ عَنَّا الْحِيَلُ ، الْحَمْدُ لِلَّهِ الَّذِي هُوَ رَجَاؤُنَا يَوْمَ تَسُوءُ ظُنُونُنَا وَأَعْمَالُنَا ، الْحَمْدُ لِلَّهِ الَّذِي يَكْشِفُ حُزْنَنَا عَنْ كَرْبِنَا ، الْحَمْدُ لِلَّهِ الَّذِي يَجْزِي بِالْإِحْسَانِ إِحْسَانًا ، الْحَمْدُ لِلَّهِ الَّذِي يَجْزِي بِالصَّبِرِ نَجَاة
    </string>
    <string name="rizk3">
    «اللهم افتح لنا خزائن رحمتك، اللهم رحمة لا تعذبنا بعدها في الدنيا والآخرة، وارزقنا من فضلك الواسع رزقًا حلالًا طيبًا، ولا تحوجنا ولا تفقرنا إلى أحد سواك، وزدنا لك شكرًا، وإليك فقرًا، وبك عمّن سواك غنىً وتعفّفًا».


</string>
    <string name="riz4">  اللهمّ ارزقني بزوجٍ صالح، تقيّ، هنيّ، عاشقٍ لله ورسوله، ناجحٍ في حياته، أكون قرّة عينه وقلبه، ويكون قرّة قلبي وعيني اللهمّ إني أعوذ بك من بوار الأيم، وتأخّر الزّواج وبطئه، وأسألك أن ترزقني خيراً ممّا أستحق من الزّوج (الزّوجة) وممّا آمل اللهمّ حصّن فرجي، ويسّر لي أمري، واكفني بحلالك عن حرامك، وبفضلك عمّن سواك</string>
    <string name="marid">  اللهم إنا نسألك بأسمائك الحسنى وبصفاتك العلا وبرحمتك التي وسعت كلّ شيء، أن تمنّ علينا بالشفاء العاجل، وألّا تدع فينا جرحًا إلّا داويته، ولا ألمًا إلا سكنته، ولا مرضًا إلا شفيته، وألبسنا ثوب الصحة والعافية عاجلًا غير آجل، وشافِنا وعافِنا واعف عنا، واشملنا بعطفك ومغفرتك، وتولّنا برحمتك يا أرحم الراحمين.

</string>
    <string name="marid1">بسم الله أرقي نفسي من كلّ شيء يؤذيني، ومن شر كلّ نفس أو عين حاسد، بسم الله أرقي نفسي الله يشفيني، ما شاء الله كان، وما لم يشأ لم يكن، ولا حول ولا قوة إلّا بالله، أسأل الله العظيم رب العرش العظيم أن يشفيك ويشفي مرضى المسلمين.  </string>
    <string name="marid2">اللهم ألبسنا ثوب الصحة والعافية عاجلًا غير آجل، وشافِنا وعافِنا واعف عنا، واشملنا بعطفك ومغفرتك، وتولنا برحمتك يا أرحم الراحمين. </string>
    <string name="marid3">يا مُفرّج الكرب يا مُجيب دعوة المُضطرين، اللهم ألبس كل مريض ثوب الصحة والعافية عاجلًا غير آجل يا أرحم الراحمين، اللهم اشفه، اللهم اشفه، اللهم اشفه، اللهم آمين. </string>
    <string name="marid4">

 إلهي كيف أدعوك وأنا أنا، وكيف أقطع رجائي منك وأنت أنت، إلهي إن لم أسألك فتعطيني فمن ذا الذي أسأله فيعطيني؛ وإن لم أدعك فتستجيب لي فمن ذا الذي أدعوه فيستجيب لي، وإن لم أتضرّع إليك فترحمني فمن ذا الذي أتضرّع إليه فيرحمني، وكما فلقت البحر لموسى فنجّيته من الغرق، فصلّ وسلم يا ربّ على محمّد وآل محمّد ونجّني ممّا أنا فيه من كرب وسهّل أمري بفرج عاجل غير آجل وبرحمتك يا أرحم الراحمين. </string>
    <string name="napoia">اللَّهُمَّ أنَْتَ رَبيِّ لَا إلِهََ إلَِّا أنَتَ، خَلَقْتنَيِ وَأنََا عَبدُْكَ، وَأنََا عَلَى عَهْدِكَ وَوَعْدِكَ مَا اسْتَطَعْتُ، أَعُوذُ بِكَ مِنْ شَرِّ مَا صَنَعْتُ، أَبُوءُ لَكَ بِنِعْمَتِكَ عَلَيَّ، وَأَبُوءُ بِذَنْبِي فَاغْفِرْ لِي فَإِنَّهُ لَا يَغْفِرُ الذُّنُوبَ إِلَّا أَنْتَ.
رواه البخاري (6306) عن شداد بن أوس وقد وصف النبي هذا الدعاء بأنه سيد الاستغفار.
</string>
    <string name="napoia1">اللَّهُمَّ إِنِّي ظَلَمْتُ نَفْسِي ظُلْمًا كَثِيرًا، وَلَا يَغْفِرُ الذُّنُوبَ إِلَّا أَنْتَ، فَاغْفِرْ لِي مَغْفِرَةً مِنْ عِنْدِكَ وَارْحَمْنِي إِنَّك أَنْتَ الْغَفُورُ الرَّحِيمُ.
رواه البخاري (834) ومسلم (6869) عن أبي بكر.</string>
    <string name="napoia2">رَبِّ اغْفِرْ لِي خَطِيئَتِي وَجَهْلِي وَإِسْرَافِي فِي أَمْرِي كُلِّهِ وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي، اللَّهُمَّ اغْفِرْ لِي خَطَايَايَ وَعَمْدِي وَجَهْلِي وَهَزْلِي، وَكُلُّ ذَلِكَ عِنْدِي، اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ وَمَا أَخَّرْتُ وَمَا أَسْرَرْتُ وَمَا أَعْلَنْتُ أَنْتَ الْمُقَدِّمُ وَأَنْتَ الْمُؤَخِّرُ وَأَنْتَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ.
رواه البخاري (6398) ومسلم (6901) عن أبي موسى.</string>
    <string name="napoia3">اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْكَسَلِ وَالْهَرَمِ وَالْمَأْثَمِ وَالْمَغْرَمِ، وَمِنْ فِتْنَةِ الْقَبْرِ وَعَذَابِ الْقَبْرِ، وَمِنْ فِتْنَةِ النَّارِ وَعَذَابِ النَّارِ، وَمِنْ شَرِّ فِتْنَةِ الْغِنَى، وَأَعُوذُ بِكَ مِنْ فِتْنَةِ الْفَقْرِ، وَأَعُوذُ بِكَ مِنْ فِتْنَةِ الْمَسِيحِ الدَّجَّالِ، اللَّهُمَّ اغْسِلْ عَنِّي خَطَايَايَ بِمَاءِ الثَّلْجِ وَالْبَرَدِ، وَنَقِّ قَلْبِي مِنَ الْخَطَايَا كَمَا نَقَّيْتَ الثَّوْبَ الْأَبْيَضَ مِنَ الدَّنَسِ، وَبَاعِدْ بَيْنِي وَبَيْنَ خَطَايَايَ كَمَا بَاعَدْتَ بَيْنَ الْمَشْرِقِ وَالْمَغْرِبِ.
رواه البخاري (6368) ومسلم (6871) عن عائشة.</string>
    <string name="napoia4"></string>
    <string name="napoia5">اللَّهُمَّ رَبَّ السَّمَوَاتِ وَرَبَّ الْأَرْضِ وَرَبَّ الْعَرْشِ الْعَظِيمِ، رَبَّنَا وَرَبَّ كُلِّ شَيْءٍ، فَالِقَ الْحَبِّ وَالنَّوَى وَمُنْزِلَ التَّوْرَاةِ وَالْإِنْجِيلِ وَالْفُرْقَانِ، أَعُوذُ بِكَ مِنْ شَرِّ كُلِّ شَيْءٍ أَنْتَ آخِذٌ بِنَاصِيَتهِِ، اللَّهُمَّ أَنْتَ الْأوََّلُ فَلَيْسَ قَبْلَكَ شَيْءٌ، وَأَنْتَ الْآخِرُ فَلَيْسَ بَعْدَكَ شَيْءٌ، وَأَنْتَ الظَّاهِرُ فَلَيْسَ فَوْقَكَ شَيْءٌ، وَأَنْتَ الْبَاطِنُ فَلَيْسَ دُونَكَ شَيْءٌ، اقْضِ عَنَّا الدَّيْنَ وَأَغْنِنَا مِنَ الْفَقْرِ.
رواه مسلم (6889) عن أبي هريرة.</string>
    <string name="napoia7">اللَّهُمَّ أَصْلِحْ لِي دِينِي الَّذِي هُوَ عِصْمَةُ أَمْرِي، وَأَصْلِحْ لِي دُنْيَايَ الَّتِي فِيهَا مَعَاشِي، وَأَصْلِحْ لِي آخِرَتِي الَّتِي فِيهَا مَعَادِي وَاجْعَلِ الْحَيَاةَ زِيَادَةً لِي فِي كُلِّ خَيْرٍ، وَاجْعَلِ الْمَوْتَ رَاحَةً لِي مِنْ كُلِّ شَرٍّ. </string>
    <string name="napoia8">رَبِّ أَعِنِّي وَلَا تُعِنْ عَلَيَّ، وَانْصُرْنِي وَلَا تَنْصُرْ عَلَيَّ، وَامْكُرْ لِي وَل َاتَمْكُرْ عَلَيَّ، وَاهْدِنِي وَيَسِّرِ الْهُدَى لِي، وَانْصُرْنِي عَلَى مَنْ بَغَى عَلَيَّ، رَبِّ اجْعَلْنِي لَكَ شَكَّارًا، لَكَ ذَكَّارًا، لَكَ رَهَّابًا، لَكَ مِطْوَاعًا، لَكَ مُخْبِتًا إِلَيْكَ أَوَّاهًا مُنِيبًا، رَبِّ تَقَبَّلْ تَوْبَتِي وَاغْسِلْ حَوْبَتِي وَأَجِبْ دَعْوَتِي وَثَبِّتْ حُجَّتِي وَسَدِّدْ لِسَانِي وَاهْدِ قَلْبِي وَاسْلُلْ سَخِيمَةَ صَدْرِي.
رواه الترمذي (3551) وغيره بإسناد صحيح عن ابن عباس.</string>
    <string name="napoia9">
اللَّهُمَّ لَكَ الْحَمْدُ كُلُّهُ، اللَّهُمَّ لَا قَابِضَ لِمَا بَسَطْتَ، وَلَا بَاسِطَ لِمَا قَبَضْتَ، وَلَا هَادِيَ لِمَا أَضْلَلْت، وَلَا مُضِلَّ لِمَنْ هَدَيْتَ، وَلَا مُعْطِيَ لِمَا مَنَعْتَ، وَلَا مَانِعَ لِمَا أَعْطَيْتَ، وَلَا مُقَرِّبَ لِمَا بَاعَدْتَ، وَلَا مُبَاعِدَ لِمَا قَرَّبْتَ، اللَّهُمَّ ابْسُطْ عَلَيْنَا مِنْ بَرَكَاتِكَ وَرَحْمَتِكَ وَفَضْلِكَ وَرِزْقِكَ، اللَّهُمَّ إِنِّي أَسْأَلُكَ النَّعِيمَ الْمُقِيمَ الَّذِي لَا يَحُولُ وَلَا يَزُولُ، اللَّهُمَّ إِنِّي أَسْأَلُكَ النَّعِيمَ يَوْمَ الْعَيْلَةِ، وَالْأَمْنَ يَوْمَ الْخَوْفِ، اللَّهُمَّ إنِِّي عَائذٌِ بكَِ مِنْ شَرِّ مَا أَعْطَيْتَنَا وَشَرِّ مَا مَنَعْتَ، اللَّهُمَّ حَبِّبْ إلَِيْنَا الْإِيمَانَ وَزَيِّنْهُ فيِ قُلُوبِنَا، وَكَرِّهْ إِلَيْنَا الْكُفْرَ وَالْفُسُوقَ وَالْعِصْيَانَ، وَاجْعَلْنَا مِنَ الرَّاشِدِينَ، اللَّهُمَّ تَوَفَّنَا مُسْلِمِينَ، وَأَحْيِنَا مُسْلِمِينَ، وَأَلْحِقْنَا بِالصَّالِحِينَ غَيْرَ خَزَايَا وَلَا مَفْتُونِينَ، اللَّهُمَّ قَاتِلْ الْكَفَرَةَ الَّذِينَ يُكَذِّبُونَ رُسُلَكَ، وَيَصُدُّونَ عَنْ سَبِيلِكَ، وَاجْعَلْ عَلَيْهِمْ رِجْزَكَ وَعَذَابَكَ، اللَّهُمَّ قَاتِلْ الْكَفَرَةَ الَّذِينَ أُوتُوا الْكِتَابَ إِلَهَ الْحَقِّ.
</string>
    <string name="napoia10">اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ كَمَا صَلَّيْتَ عَلَى إِبْرَاهِيمَ وعَلَى آلِ إِبْرَاهِيمَ، إِنَّكَ حَمِيدٌ مَجِيدٌ، اللّٰهُمَّ بَارِكْ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ كَمَا بَارَكْتَ عَلَى إِبْرَاهِيمَ وَعَلَى آلِ إِبْرَاهِيمَ إِنَّكَ حَمِيدٌ مَجِيدٌ.
رواه البخاري (3370) ومسلم (908) عن كعب بن عُجرة.</string>
    <string name="safar">دعاء المسافر اللهم احفظ كل عزيز امسك طريق غايته طاعة الله اللهم خفف لهم عناء السفر واجعل طريقهم بكل سهولة ويسر وارجعهم بأتم عافية اللهم امين سُبْحانَ الَّذِي سخَّرَ لَنَا هَذَا وَمَا كنَّا لَهُ مُقْرِنينَ، وَإِنَّا إِلى ربِّنَا لمُنْقَلِبُونَ، اللَّهُمَّ إِنَّا نَسْأَلُكَ في سَفَرِنَا هذا البرَّ والتَّقوى، ومِنَ العَمَلِ ما تَرْضى، اللَّهُمَّ هَوِّنْ علَيْنا سفَرَنَا هَذَا، وَاطْوِ عنَّا بُعْدَهُ، اللَّهُمَّ أَنتَ الصَّاحِبُ في السَّفَرِ، وَالخَلِيفَةُ في الأَهْلِ.</string>
    <string name="safar1">يا أرضُ ربي وربك الله، أعوذ بالله من شرك وشر ما فيك وشر ما خلق فيك، ومن شر ما يدب عليك، وأعوذ بالله من أسدٍ وأسْوَد، ومن الحية والعقرب. ومن ساكني البلد، ومن والدٍ وما ولد</string>
    <string name="safar2">أستودعك الله دينك وأمانتك وأخر عملك , زودك الله التقوى ، وغفر ذنبك ويسر لك الخير حيث ما كنت. اللهم إني عبدك و ابن أمتك ناصيتي بيدك ماض في حكمك، عدل في قضاؤك، أسألك بكل اسم هو لك سميت به نفسك ، أو علمته أحد من خلقك ، أو أنزلته في كتابك ، أو استأثرت به في علم الغيب عندك ، أن تجعل القرآن الكريم ربيع قلبي و نور صدري ، و جلاء حزني ، و ذهاب همي.</string>
    <string name="safar3">دعاء المسافر اللهم وفقه ويسر امره واحفظه من بين يديه ومن خلفه. ربي لي مسافر اسألك يا الله ان تحفظه من كل شر اللهم اني استودعك غالي فيسر اموره و وفقه و احفظه بعينك التي لا تنام.</string>
    <string name="safar4">دعاء السفر للزوج اللهم ربنا لك الحمد، أتمم النعمة والفضل والعافية والستر وجبر الكسر وزيادة البر وكبت الشر، يامن تزيد في الخلق ما تشاء زدنا قوة منك نتقوى بها على طاعتك، نلتمس عونا منك لنقوم بشكر نعمك، أطفئ لوعة قلوبنا بفيض من حبك ولطفك.</string>
    <string name="safar5">اللهم أرزقني حجاً مقبولاً وذنباً مغفوراً وأجعل اللهم قبري روضة من رياض الجنة ولا تجعله حفرة من حفر النيران، وأن تدخلني الجنة دون حساب ولا سابقة عذاب يارب العالمين.</string>
    <string name="safar6">عن أَنسٍ رضي اللَّه عنه قال: جَاءَ رَجُلٌ إلى النبيِّ صَلّى اللهُ عَلَيْهِ وسَلَّم فقال: يا رسُولَ اللَّه، إِني أُرِيدُ سَفَرًا، فَزَوِّدْني، فَقَالَ: «زَوَّدَكَ اللَّه التَّقْوَى» قال: زِدْني، قال: «وَغَفَرَ ذَنْبَكَ» قال: زِدْني، قال: «وَيَسَّرَ لكَ الخيْرَ حَيْثُمَا كُنْتَ» رواه الترمذي.
</string>
    <string name="safar7">عند العودة من رحلات الحج يتم ترديد دعاء (الله أكبر الله أكبر الله أكبر الله أكبر لا إله إلا الله وحده لا شريك له له الملك وله الحمد وهو على كل شيء قدير آيبون تائبون صدق الله وعده ونصر عبده وهزم الأحزاب وحده).</string>
</resources>