<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:scrollbars="vertical"
    android:background="#A3CF92"




    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"




        >



        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"

            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:background="@drawable/shapescreen"
            android:gravity="center"
            android:text="@string/napoia"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:textSize="25dp"
            android:textStyle="bold"></TextView>



        <TextView
            android:drawableTop="@drawable/moslem"

            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:backgroundTint="#A5CEED"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:background="@drawable/shapescreen"
            android:text="@string/napoia1"></TextView>


        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"

            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:background="@drawable/shapescreen"
            android:text="@string/napoia2"></TextView>
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:backgroundTint="#A5CEED"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textIsSelectable="true"
            android:background="@drawable/shapescreen"
            android:text="@string/napoia3"></TextView>

        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:background="@drawable/shapescreen"
            android:text="@string/napoia4"></TextView>


        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:background="@drawable/shapescreen"
            android:text="@string/napoia5"></TextView>
        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:background="@drawable/shapescreen"
            android:text="@string/napoia7"></TextView>
        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:background="@drawable/shapescreen"
            android:text="@string/napoia8"></TextView>
        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:background="@drawable/shapescreen"
            android:text="@string/napoia9"></TextView>
        <TextView
            android:drawableTop="@drawable/moslem"
            android:backgroundTint="#A5CEED"
            android:gravity="center"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"

            android:background="@drawable/shapescreen"
            android:text="@string/napoia10"></TextView>


    </LinearLayout>


</ScrollView>
